// Holon contract for Sophia Who?
// Generated by: manual (code-first birth)
// Clade: deterministic/pure
// Status: draft
//
// Sophia Who? creates and manages identity cards (HOLON.md)
// for other holons. She is the primordial holon â€” the midwife
// of the ecosystem.

syntax = "proto3";

package holon.sophia_who;

option go_package = "sophia-who/proto";

// SophiaWhoService provides holon identity lifecycle management.
service SophiaWhoService {

  // CreateIdentity interactively creates a new holon identity.
  // Returns the generated HOLON.md content and the file path.
  rpc CreateIdentity (CreateIdentityRequest) returns (CreateIdentityResponse);

  // ShowIdentity retrieves a holon's identity by UUID.
  rpc ShowIdentity (ShowIdentityRequest) returns (ShowIdentityResponse);

  // ListIdentities scans the project for all known holons.
  rpc ListIdentities (ListIdentitiesRequest) returns (ListIdentitiesResponse);

  // PinVersion captures version, OS, and architecture info for a holon's binary.
  rpc PinVersion (PinVersionRequest) returns (PinVersionResponse);
}

// --- Messages ---

// Clade enumerates the computational nature of a holon.
enum Clade {
  CLADE_UNSPECIFIED = 0;
  DETERMINISTIC_PURE = 1;
  DETERMINISTIC_STATEFUL = 2;
  DETERMINISTIC_IO_BOUND = 3;
  PROBABILISTIC_GENERATIVE = 4;
  PROBABILISTIC_PERCEPTUAL = 5;
  PROBABILISTIC_ADAPTIVE = 6;
}

// ReproductionMode describes how a holon was created.
enum ReproductionMode {
  REPRODUCTION_UNSPECIFIED = 0;
  MANUAL = 1;
  ASSISTED = 2;
  AUTOMATIC = 3;
  AUTOPOIETIC = 4;
  BRED = 5;
}

// Status represents the lifecycle stage of a holon.
enum Status {
  STATUS_UNSPECIFIED = 0;
  DRAFT = 1;
  STABLE = 2;
  DEPRECATED = 3;
  DEAD = 4;
}

// HolonIdentity is the complete civil status of a holon.
message HolonIdentity {
  // Required
  string uuid = 1;
  string given_name = 2;
  string family_name = 3;
  string motto = 4;
  string composer = 5;
  Clade clade = 6;
  Status status = 7;
  string born = 8; // ISO 8601 date

  // Lineage
  repeated string parents = 9;
  ReproductionMode reproduction = 10;

  // Pinning
  string binary_path = 11;
  string binary_version = 12;
  string git_tag = 13;
  string git_commit = 14;
  string os = 15;
  string arch = 16;
  repeated string dependencies = 17;

  // Optional
  repeated string aliases = 18;
  string wrapped_license = 19;

  // Metadata
  string generated_by = 20;
  string lang = 21;
  Status proto_status = 22;
}

// --- CreateIdentity ---

message CreateIdentityRequest {
  string given_name = 1;       // Required.
  string family_name = 2;      // Required.
  string motto = 3;            // Required.
  string composer = 4;         // Required.
  Clade clade = 5;             // Required.
  ReproductionMode reproduction = 6;
  string lang = 7;             // Default: from .holonconfig
  repeated string aliases = 8;
  string wrapped_license = 9;
  string output_dir = 10;      // Default: .holon/<name>/
}

message CreateIdentityResponse {
  HolonIdentity identity = 1;
  string file_path = 2;        // Where HOLON.md was written.
}

// --- ShowIdentity ---

message ShowIdentityRequest {
  string uuid = 1;             // Full UUID or prefix.
}

message ShowIdentityResponse {
  HolonIdentity identity = 1;
  string file_path = 2;
  string raw_content = 3;      // The full HOLON.md file content.
}

// --- ListIdentities ---

message ListIdentitiesRequest {
  string root_dir = 1;         // Directory to scan. Default: current dir.
}

message ListIdentitiesResponse {
  repeated HolonIdentity identities = 1;
}

// --- PinVersion ---

message PinVersionRequest {
  string uuid = 1;             // Target holon UUID.
  string binary_path = 2;
  string binary_version = 3;
  string git_tag = 4;
  string git_commit = 5;
  string os = 6;
  string arch = 7;
}

message PinVersionResponse {
  HolonIdentity identity = 1;  // Updated identity after pinning.
}
